Smart Lock: Move SignIn failure metric for decrpytion failure.

The SmartLock.AuthResult.SignIn.Failure bucket "User controller
sign in failure" was being recorded in an area of code that could
also be called by the regular unlock context. Moved to a more
appropriate sign-in only context.

Also fix a minor issue in ScreenlockStateHandler incorrectly
reporting an auth failure in the event that the state has become
active (this occurs after an auth attempt succeeds).

Bug: 916753
Change-Id: If6a2e41dbe43d50ac869c9c16d6204347a224a75
Reviewed-on: https://chromium-review.googlesource.com/c/1385465
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618064}
Former-commit-id: fae7c4b81c5056701a823d61d49e9c406a4df40d