chrome/browser/chromeos/login/easy_unlock/easy_unlock_user_login_flow.cc
@@ -32,6 +32,9 @@ bool EasyUnlockUserLoginFlow::ShouldSkipPostLoginScreens() {
 }
 
 bool EasyUnlockUserLoginFlow::HandleLoginFailure(const AuthFailure& failure) {
+  SmartLockMetricsRecorder::RecordAuthResultSignInFailure(
+      SmartLockMetricsRecorder::SmartLockAuthResultFailureReason::
+          kUserControllerSignInFailure);
   UMA_HISTOGRAM_ENUMERATION(
       "SmartLock.AuthResult.SignIn.Failure.UserControllerAuth",
       failure.reason(), AuthFailure::FailureReason::NUM_FAILURE_REASONS);
